--- a/src/components/Topic.module.css
+++ b/src/components/Topic.module.css
@@ -2,7 +2,7 @@
     font-size: 14px;
     height: 50px;
     width: 15%;
-    margin-left: 2%;
+    margin-left: 2%
 }
 
 .topic_content{
@@ -37,3 +37,5 @@
     margin-left: 7.6%;
     margin-bottom: 10px;
 }
+
+
